# city-gen

./: .clang-format  .gitignore  meson.build
include/: file.h  mesh.h
shaders/: shader.vert
src/: file.c  main.c  mesh.c  meson.build
